--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+ <h1> Biblioteca dos livros, um aplicativo sobre livros para as pessoas comentar oque leram</h1>
+ <p> um aplicativo para as pessoas conversarem uma com as outras sobre os livros que elas leram e avaliar o quanto gostou da obra</p>
 </body>
 </html>
