--- a/index.html
+++ b/index.html
@@ -6,7 +6,24 @@
     <title>Document</title>
 </head>
 <body>
- <h1> Biblioteca dos livros, um aplicativo sobre livros para as pessoas comentar oque leram</h1>
- <p> um aplicativo para as pessoas conversarem uma com as outras sobre os livros que elas leram e avaliar o quanto gostou da obra</p>
+ <h1>Aespa</h1>
+ <p> Aespa estreou em 17 de novembro de 2020, com o single "Black Mamba", 
+que alcançou o maior número de visualizações em 24 horas para o vídeo de estreia de um grupo de K-pop.
+O grupo é composto por quatro integrantes: Karina, Winter, Giselle e Ningning.
+ O grupo é conhecido por popularizar o conceito de metaverso e o gênero hyperpop no K-pop.</p>
+<h2>Karina</h2>
+<p> conhecida profissionalmente como Karina é uma cantora, rapper, compositora, apresentadora de TV,
+modelo, atriz e dançarina sul-coreana. 
+Ela é líder do girl group sul-coreano aespa, formado pela gravadora SM Entertainment em 17 de novembro de 2020.
+Ela também é integrante do supergrupo Got the Beat, que estreou em 3 de janeiro de 2022.
+Em 2024, Karina alcançou seu primeiro top-dez músicas como artista solo no Circle Digital Chart.
+ Karina ganhou o seu primeiro prêmio no programa músical Show! Music Core com a canção "UP",
+  ela ganhou o prêmio antes da sua estréia oficial como artista solo.
+ A música foi primeiramente apresentada em julho na tour Synk: Parallel Line,
+ a música logo se tornou viral com vários artistas fazendo covers da música.
+ Karina nasceu e foi criada em Suwon, Província de Gyeonggi, Coreia do Sul,
+  em uma família composta por seus pais e uma irmã mais velha.
+ Ela frequentou a Hansol High School até ser descoberta por um caçador de talentos da SM nas redes sociais.
+ Ela então desistiu para se concentrar no treinamento e mais tarde obteve um certificado equivalente a GED.</p>
 </body>
 </html>
