--- a/index.html
+++ b/index.html
@@ -28,4 +28,4 @@ Em 2024, Karina alcançou seu primeiro top-dez músicas como artista solo no Cir
  <h3>Winter</h3.>
 <p>Kim Min-jeong nasceu em 1 de janeiro de 2001, em Nampo-dong, Busan, Coreia do Sul,[2][3][4] mas passou a infância em Yangsan,
  Gyeongsang do Sul.[5] Ela nasceu em uma família militar com seu pai, irmão mais velho e vários parentes, todos militares.
- Devido a isso, ela inicialmente sonhava em se tornar um soldado.[
+ Devido a isso, ela inicialmente sonhava em se tornar um soldado.</p.>
