--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 que alcançou o maior número de visualizações em 24 horas para o vídeo de estreia de um grupo de K-pop.
 O grupo é composto por quatro integrantes: Karina, Winter, Giselle e Ningning.
 O grupo é conhecido por popularizar o conceito de metaverso e o gênero hyperpop no K-pop.</p>
+<img src="Grupo-feminino-de-K-Pop-aespa-lanca-‘My-World-The-3rd-Mini-Album-scaled-1.webp">
 <h2>Karina</h2>
 <p> conhecida profissionalmente como Karina é uma cantora, rapper, compositora, apresentadora de TV,
 modelo, atriz e dançarina sul-coreana. 
@@ -37,4 +38,6 @@ e cresceu em Tóquio, Japão.[4] Ela é fluente em japonês, coreano e inglês.E
 a Escola Internacional do Sagrado Coração,onde foi apresentada ao K-pop em seu segundo ano do ensino médio. Mais tarde, 
 ela retornou à Coreia após a formatura para fazer um teste para a SM Entertainment e passou nas audições de sábado 
 <h5>Ningning</h5>
-<p></p>
+<p>Ningning nasceu como Ning Yizhuo em 23 de outubro de 2002, em Harbin, China. 
+Ela frequentou a Harbin Normal University Middle School (哈尔滨师范大学附属中学) 
+e a Beijing Contemporary Music Academy (北京市现代音乐学校), graduando-se em ambas.</p>
