--- a/index.html
+++ b/index.html
@@ -39,5 +39,8 @@ a Escola Internacional do Sagrado Coração,onde foi apresentada ao K-pop em seu
 ela retornou à Coreia após a formatura para fazer um teste para a SM Entertainment e passou nas audições de sábado 
 <h5>Ningning</h5>
 <p>Ningning nasceu como Ning Yizhuo em 23 de outubro de 2002, em Harbin, China. 
-Ela frequentou a Harbin Normal University Middle School (哈尔滨师范大学附属中学) 
-e a Beijing Contemporary Music Academy (北京市现代音乐学校), graduando-se em ambas.</p>
+Ela frequentou a Harbin Normal University Middle Schoole a Beijing Contemporary Music Academy, graduando-se em ambas.
+vNingning foi observada pela SM Entertainment após sua aparição no programa de TV chinês Let's Sing Kids. 
+Mais tarde, ela foi apresentada como membro da equipe de treinamento de pré-estreia SM Rookies em 19 de setembro de 2016.
+Como parte da equipe, ela apareceu no segmento Rookies Princess: Who's the Best? do programa My SMT naquele ano,
+ e gravou vários covers para o programa de TV animado coreano Shining Star em 2017.</p>
