--- a/index.html
+++ b/index.html
@@ -44,3 +44,13 @@ vNingning foi observada pela SM Entertainment após sua aparição no programa d
 Mais tarde, ela foi apresentada como membro da equipe de treinamento de pré-estreia SM Rookies em 19 de setembro de 2016.
 Como parte da equipe, ela apareceu no segmento Rookies Princess: Who's the Best? do programa My SMT naquele ano,
 e gravou vários covers para o programa de TV animado coreano Shining Star em 2017.</p>
+<ul>
+<li>Karina</li>
+<li>Winter</li>
+<li>Giselle</li>
+<li>Ningning</li>
+</ul>
+</body>
+</html>
+
+
